[package]
authors = ["Kellen Carey <kellen.carey@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f411v-disc"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
# version = "0.5.0"
git = "https://github.com/stm32-rs/stm32f4xx-hal"
features = ["stm32f411", "rt"]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.nb]
version = "0.1.2"

[dependencies.alloc-cortex-m]
version = "0.3.5"

# Gyroscope
[dependencies.l3gd20]
# This fork has better support for embedded-hal v2
# There is a pull request from this fork that will hopefully make
# its way into the crates.io version
git = "https://github.com/bobgates/l3gd20"

# Accelerometer + Magnetometer
[dependencies.lsm303dlhc]
version = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f411v-disc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
